[Bug #18905] Check symbol name types more strictly